--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,18 @@
 ---
-import '../styles/global.css'
+import "../styles/global.css";
 ---
 
-<html lang="en">
+<!doctype html>
+<html lang="fr">
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Document</title>
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<title>Accueil</title>
 	</head>
 	<body>
-		<h1>Hello, Astro!</h1>
+		<h1>Accueil</h1>
+		<a href="/offres">Offres</a>
+		<a href="/">Accueil</a>
 	</body>
 </html>
