nom de maison en ul li

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,9 @@
-<nav>
-    <a href="/">Accueil</a>
-    <a href="/offres">Offres</a>
+<nav
+    class="flex justify-around items-center gap-2 p-2 bg-indigo-950 text-white font-bold"
+>
+    <p class="text-xl">TP 1 R.213</p>
+    <div class="flex gap-2">
+        <a href="/" class="px-3 py-2 bg-blue-900 rounded-xl">Accueil</a>
+        <a href="/offres" class="px-3 py-2 bg-blue-900 rounded-xl">Offres</a>
+    </div>
 </nav>
