--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,5 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout titre="Accueil">
-	<h1>Accueil</h1>
-	<!-- ou "Offres" pour la page des offres -->
+	<h1 class="text-2xl font-bold text-center p-5">Accueil</h1>
 </Layout>
