--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,8 +1,110 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Product from "../components/Product.astro";
+const offres = [
+    {
+        adresse: "2821 Lake Sevilla, Palm Harbor, TX",
+        favori: true,
+        id: "64l3n8nar836i5j",
+        nbChambres: 4,
+        nbSdb: 2,
+        nomMaison: "Beverly Springfield",
+        prix: 2700,
+        surface: 45,
+        imgUrl: "image1.png",
+    },
+    {
+        adresse: "2699 Green Valley, Highland Lake",
+        favori: true,
+        id: "lo831zeg10hpm9y",
+        nbChambres: 4,
+        nbSdb: 2,
+        nomMaison: "Palm Harbor",
+        prix: 2095,
+        surface: 42,
+        imgUrl: "image2.png",
+    },
+    {
+        adresse: "909 Woodland St, Michigan, IN",
+        favori: false,
+        id: "s1zuhj19x8eb242",
+        nbChambres: 4,
+        nbSdb: 3,
+        nomMaison: "Faulkner Ave",
+        prix: 4550,
+        surface: 80,
+        imgUrl: "image3.png",
+    },
+];
 ---
 
 <Layout titre="Offres">
-    <h1>Offres</h1>
-    <!-- ou "Offres" pour la page des offres -->
+    <h1 class="text-2xl font-bold text-center p-5">Offres</h1>
+    <ul>
+        {offres.map((offre) => <li>{offre.nomMaison}</li>)}
+    </ul>
+    <div class="flex-col flex justify-center gap-4 items-center">
+        <ul class="flex justify-center gap-4 items-center p-5">
+            <li
+                class="p-5 bg-blue-900 rounded-xl text-white font-semibold ring-3 ring-blue-500"
+            >
+                -20€ sur votre première commande
+            </li>
+            <li
+                class="p-5 bg-blue-900 rounded-xl text-white font-semibold ring-3 ring-blue-500"
+            >
+                -15% sur les commandes de plus de 50€
+            </li>
+            <li
+                class="p-5 bg-blue-900 rounded-xl text-white font-semibold ring-3 ring-blue-500"
+            >
+                -10% sur tout le site jusqu'au 01/02/2026
+            </li>
+        </ul>
+        <div class="separator w-10/12 h-[3px] mb-7 mt-4 bg-gray-400"></div>
+        <h2 class="text-xl font-bold">Nos Produits</h2>
+        <div
+            class="products-table w-full p-5 flex flex-wrap justify-center gap-4 bg-white"
+        >
+            <Product
+                name="Produit A"
+                price="30"
+                description="Un super produit A."
+            />
+            <Product
+                name="Produit B"
+                price="60"
+                description="Un super produit B."
+            />
+            <Product
+                name="Produit C"
+                price="100"
+                description="Un super produit C."
+            />
+            <Product
+                name="Produit D"
+                price="45"
+                description="Un super produit D."
+            />
+            <Product
+                name="Produit E"
+                price="45"
+                description="Un super produit E."
+            />
+            <Product
+                name="Produit F"
+                price="45"
+                description="Un super produit F."
+            />
+        </div>
+        <div class="separator w-10/12 h-[3px] mb-7 mt-4 bg-gray-400"></div>
+        <h2 class="text-xl font-bold">Nos Valeurs</h2>
+        <p class="w-10/12 text-center mb-7">
+            Chez Mael Brungard, nous nous engageons à offrir des produits de
+            qualité tout en respectant l'environnement. Nous croyons en la
+            transparence, l'innovation et la satisfaction client. Notre mission
+            est de créer une expérience d'achat exceptionnelle tout en
+            contribuant positivement à la société.
+        </p>
+    </div>
 </Layout>
