--- a/src/components/PbImage.astro
+++ b/src/components/PbImage.astro
@@ -20,7 +20,7 @@ const imageURL = await getImageUrl(record, imageField);
             inferSize={true}
             width={width}
             height={height}
-            class="object-cover h-100 object-center"
+            class="object-cover h-100 object-bottom"
         />
     )
 }
