--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -14,7 +14,9 @@ console.log(offres);
         class="bg-slate-600 rounded-lg text-white p-2 cursor-pointer"
         >Afficher les favoris</button
     >
-    <ul class="flex flex-col items-center gap-10 p-10">
+    <ul
+        class="flex flex-wrap justify-center items-start items-center gap-10 p-10"
+    >
         {
             offres.map((offre) => (
                 <li>
