--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Product from "../components/Product.astro";
-import Card from "../components/OffreCard.astro";
-import { getOffres } from "../js/backend.mjs";
+import Layout from "../../layouts/Layout.astro";
+import Product from "../../components/Product.astro";
+import Card from "../../components/OffreCard.astro";
+import { getOffres } from "../../js/backend.mjs";
 const offres = await getOffres();
 console.log(offres);
 ---
