--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -14,6 +14,12 @@ console.log(offres);
         class="bg-slate-600 rounded-lg text-white p-2 cursor-pointer"
         >Afficher les favoris</button
     >
+    <a
+        id="surface-button"
+        href="/offres/surface/80"
+        class="bg-slate-600 rounded-lg text-white p-2 cursor-pointer"
+        >Afficher les + de 80m²</a
+    >
     <ul
         class="flex flex-wrap justify-center items-start items-center gap-10 p-10"
     >
