--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -20,6 +20,12 @@ console.log(offres);
         class="bg-slate-600 rounded-lg text-white p-2 cursor-pointer"
         >Afficher les + de 80m²</a
     >
+    <a
+        id="surface-button"
+        href="/offres/prix/100000"
+        class="bg-slate-600 rounded-lg text-white p-2 cursor-pointer"
+        >Afficher les - de 100 000€</a
+    >
     <ul
         class="flex flex-wrap justify-center items-start items-center gap-10 p-10"
     >
